--- a/02_logistic_regression/01_Collect_Tracking.ipynb
+++ b/02_logistic_regression/01_Collect_Tracking.ipynb
@@ -2,35 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-19T00:25:03.383374Z",
-     "start_time": "2020-09-19T00:24:54.553688Z"
+     "end_time": "2020-09-19T04:16:40.960463Z",
+     "start_time": "2020-09-19T04:16:40.671942Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Intitializing Scala interpreter ..."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Spark Web UI available at http://192.168.2.10:4040\n",
-       "SparkContext available as 'sc' (version = 3.0.0, master = local[*], app id = local-1600475097359)\n",
-       "SparkSession available as 'spark'\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc.hadoopConfiguration.set(\"fs.s3n.awsAccessKeyId\",sys.env(\"AWS_ACCESS_KEY\"))\n",
     "sc.hadoopConfiguration.set(\"fs.s3n.awsSecretAccessKey\", sys.env(\"AWS_SECRET_KEY\"))"
@@ -38,11 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-19T00:25:03.981675Z",
-     "start_time": "2020-09-19T00:25:03.385341Z"
+     "end_time": "2020-09-19T04:16:43.405350Z",
+     "start_time": "2020-09-19T04:16:43.111833Z"
     }
    },
    "outputs": [
@@ -54,7 +33,7 @@
        "schema: org.apache.spark.sql.types.StructType = StructType(StructField(ip,StringType,true), StructField(app,StringType,true), StructField(device,StringType,true), StructField(os,StringType,true), StructField(channel,StringType,true), StructField(click_time,StringType,true), StructField(attributed_time,StringType,true), StructField(is_attributed,StringType,true))\n"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,11 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-19T00:25:13.358315Z",
-     "start_time": "2020-09-19T00:25:03.983689Z"
+     "end_time": "2020-09-19T04:16:51.930245Z",
+     "start_time": "2020-09-19T04:16:45.448443Z"
     }
    },
    "outputs": [
@@ -94,16 +73,16 @@
       "+------+---+------+---+-------+-------------------+-------------------+-------------+\n",
       "|    ip|app|device| os|channel|         click_time|    attributed_time|is_attributed|\n",
       "+------+---+------+---+-------+-------------------+-------------------+-------------+\n",
-      "| 59882| 12|     1| 19|    424|2017-11-06 23:41:12|               null|            0|\n",
-      "|212465| 20|     1| 13|    259|2017-11-06 23:41:13|               null|            0|\n",
-      "| 55771|  1|     1| 19|    377|2017-11-06 23:41:13|               null|            0|\n",
-      "| 27646|  3|     1| 13|    409|2017-11-06 23:41:13|               null|            0|\n",
-      "|192030|  3|     1| 19|    442|2017-11-06 23:41:13|               null|            0|\n",
-      "| 44552|  2|     1| 15|    401|2017-11-06 23:41:13|               null|            0|\n",
-      "| 86607| 10|     1| 19|    113|2017-11-06 23:41:13|               null|            0|\n",
-      "|140917|  9|     1| 19|    215|2017-11-06 23:41:13|2017-11-07 14:50:00|            1|\n",
-      "|204577| 84|     0|607|    101|2017-11-06 23:41:14|2017-11-06 23:47:01|            1|\n",
-      "| 11965| 15|     1| 13|    265|2017-11-06 23:41:14|               null|            0|\n",
+      "| 89489|  3|     1| 13|    379|2017-11-06 15:13:23|               null|            0|\n",
+      "|204158| 35|     1| 13|     21|2017-11-06 15:41:07|2017-11-07 08:17:19|            1|\n",
+      "|  3437|  6|     1| 13|    459|2017-11-06 15:42:32|               null|            0|\n",
+      "|167543|  3|     1| 13|    379|2017-11-06 15:56:17|               null|            0|\n",
+      "|147509|  3|     1| 13|    379|2017-11-06 15:57:01|               null|            0|\n",
+      "| 71421| 15|     1| 13|    153|2017-11-06 16:00:00|               null|            0|\n",
+      "| 76953| 14|     1| 13|    379|2017-11-06 16:00:01|               null|            0|\n",
+      "|187909|  2|     1| 25|    477|2017-11-06 16:00:01|               null|            0|\n",
+      "|116779|  1|     1|  8|    150|2017-11-06 16:00:01|               null|            0|\n",
+      "| 47857|  3|     1| 15|    205|2017-11-06 16:00:01|               null|            0|\n",
       "+------+---+------+---+-------+-------------------+-------------------+-------------+\n",
       "\n"
      ]
@@ -119,29 +98,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-19T00:25:13.695030Z",
-     "start_time": "2020-09-19T00:25:13.360081Z"
+     "start_time": "2020-09-19T04:19:24.059Z"
     }
    },
    "outputs": [],
    "source": [
-    "// val trackingStream =  spark.readStream.format(\"csv\")\n",
-    "//     .schema(schema)\n",
-    "//     .load(\"s3n://renan-test/adtracking/*.csv\")\n",
-    "//     .withColumn(\"value\",to_json(struct($\"ip\",$\"app\",$\"device\",$\"os\",$\"channel\",$\"click_time\",$\"attributed_time\",$\"is_attributed\")))\n",
-    "//     .withColumn(\"key\",$\"app\")\n",
-    "//     .select(\"key\",\"value\")\n",
+    "val trackingStream =  spark.readStream.format(\"csv\")\n",
+    "    .schema(schema)\n",
+    "    .load(\"s3n://renan-test/adtracking/*.csv\")\n",
+    "    .withColumn(\"value\",to_json(struct($\"ip\",$\"app\",$\"device\",$\"os\",$\"channel\",$\"click_time\",$\"attributed_time\",$\"is_attributed\")))\n",
+    "    .withColumn(\"key\",$\"app\")\n",
+    "    .select(\"key\",\"value\")\n",
     "\n",
-    "// trackingStream.writeStream\n",
-    "//     .format(\"kafka\")\n",
-    "//     .option(\"kafka.bootstrap.servers\", \"localhost:9092\")\n",
-    "//     .option(\"topic\", \"tracking\")\n",
-    "//     .option(\"checkpointLocation\", \"/home/rhuanca/demo/_checkpoints/tracking\")\n",
-    "//     .start()\n",
-    "//     .awaitTermination()"
+    "trackingStream.writeStream\n",
+    "    .format(\"kafka\")\n",
+    "    .option(\"kafka.bootstrap.servers\", \"localhost:9092\")\n",
+    "    .option(\"topic\", \"tracking\")\n",
+    "    .option(\"checkpointLocation\", \"/home/rhuanca/demo/_checkpoints/tracking\")\n",
+    "    .start()\n",
+    "    .awaitTermination()"
    ]
   }
  ],
