added sample scala project with custom transformer

--- a/06_Housing_Prices/Housing_Pipeline_Example.ipynb
+++ b/06_Housing_Prices/Housing_Pipeline_Example.ipynb
@@ -358,7 +358,7 @@
     "                       \"population\", \"households\", \"median_income\", \"rooms_per_household\", \n",
     "                       \"population_per_household\", \"bedrooms_per_room\", \"ocean_proximity_cat\")\n",
     "\n",
-    "val combiner = new AttributesCombiner() // Custom\n",
+    "val combiner = new AttributesCombiner() // Custom Transformer\n",
     "    .setAddBedRooms(true)\n",
     "\n",
     "val indexer = new StringIndexer() // Transformer\n",
