added sample scala project with custom transformer

--- a/06_Housing_Prices/Housing_Pipeline_Example.ipynb
+++ b/06_Housing_Prices/Housing_Pipeline_Example.ipynb
@@ -389,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pipeline to with Different ML Algorithms"
+    "# A Data Pipeline that can be used with Different ML Algorithms"
    ]
   },
   {
